--- a/Ansible/sample.yml
+++ b/Ansible/sample.yml
@@ -4,9 +4,9 @@
   become: true
 
   vars:
-    node_exporter_version: "0.19.0"  # Specify the desired version of Node Exporter
-    username: "your_username"       # Specify the username for SSH connection
-    password: "your_password"       # Specify the password for SSH connection
+    node_exporter_version: "0.19.0"  
+    username: "your_username"       
+    password: "your_password"      
 
   tasks:
     - name: Install dependencies
